; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_validate_type_name.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi.c_zend_ffi_validate_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@SUCCESS = common dso_local global i64 0, align 8
@bailout = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zend_ffi_validate_type_name(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = call i32 @zend_ffi_finalize_type(%struct.TYPE_5__* %3)
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @ZEND_FFI_TYPE(i32 %7)
  %9 = call i64 @zend_ffi_validate_var_type(i32 %8, i32 0)
  %10 = load i64, i64* @SUCCESS, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %14 = call i32 @zend_ffi_cleanup_dcl(%struct.TYPE_5__* %13)
  %15 = load i32, i32* @bailout, align 4
  %16 = call i32 @FFI_G(i32 %15)
  %17 = load i32, i32* @FAILURE, align 4
  %18 = call i32 @LONGJMP(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @zend_ffi_finalize_type(%struct.TYPE_5__*) #1

declare dso_local i64 @zend_ffi_validate_var_type(i32, i32) #1

declare dso_local i32 @ZEND_FFI_TYPE(i32) #1

declare dso_local i32 @zend_ffi_cleanup_dcl(%struct.TYPE_5__*) #1

declare dso_local i32 @LONGJMP(i32, i32) #1

declare dso_local i32 @FFI_G(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
